--- a/LabelMasterP/MvcApplication1/MvcApplication1.csproj
+++ b/LabelMasterP/MvcApplication1/MvcApplication1.csproj
@@ -276,6 +276,7 @@
     <EmbeddedResource Include="Images\Download.png" />
     <Content Include="Images\Buy.png" />
     <Content Include="Images\Picture1.png" />
+    <Content Include="Images\Picture2.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
