Add picture4 to project + upgrade to vs2015

--- a/LabelMasterP/MvcApplication1/MvcApplication1.csproj
+++ b/LabelMasterP/MvcApplication1/MvcApplication1.csproj
@@ -20,6 +20,13 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <MvcProjectUpgradeChecked>true</MvcProjectUpgradeChecked>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>12.0</OldToolsVersion>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -272,6 +279,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Properties\PublishProfiles\labelsnappagina.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <EmbeddedResource Include="Images\Download.png" />
     <Content Include="Images\Buy.png" />
@@ -280,6 +288,7 @@
     <Content Include="Images\Picture1.png" />
     <Content Include="Images\Picture2.png" />
     <Content Include="Images\Picture3.png" />
+    <Content Include="Images\Picture4.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\DispNoDisp.js" />
